--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
     </div>
     <div class="row animated rotateInDownRight">
         <div class="col-md-12">
-            <a class="btn btn-primary float-right rotate-right mr-4 purple darken-4" href="/scrape">Grab the news</a>
+            <a class="btn btn-primary float-right rotate-right mr-4 purple darken-4" id="scrape" href="/remove">Grab the news</a>
         </div>
     </div>
     <div class="row mt-4">
