--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,3 +26,23 @@
     transform: rotate(8deg);
 }
 
+#notes {
+    position: fixed;
+    float: right;
+    right: 0;
+    margin-bottom: -10px;
+    width: 30%;
+  }
+  textarea, input {
+    display: block;
+    width: 100%;
+    background-color: #FCF5C7;
+  }
+  input {
+    height: 36px;
+    font-size: 24px;
+  }
+  textarea {
+    height: 200px;
+    font-size: 18px;
+  }
